--- a/.env
+++ b/.env
@@ -9,11 +9,18 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=192.168.100.215
 DB_PORT=3306
-DB_DATABASE=controlcalidadv3
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_DATABASE=controlCalidadV3
+DB_USERNAME=desarrollo
+DB_PASSWORD=elaine
+
+DB_CONNECTION_2=sqlsrv
+DB_HOST_2=192.168.100.215
+DB_PORT_2=3306
+DB_DATABASE_2=acecad
+DB_USERNAME_2=sa
+DB_PASSWORD_2=Elaine21.
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
