--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
             - redis
             - meilisearch
             - selenium
+            - sql-server-db
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -82,6 +83,19 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
+    sql-server-db:
+        container_name: 'sql-server-db'
+        image: 'mcr.microsoft.com/mssql/server:2019-latest'
+        ports:
+            - "1433:1433"
+        networks:
+            - sail
+        volumes:
+            - './storage/database/acecad_matutino.bak :/home/'
+        environment:
+            SA_PASSWORD: "Elaine21"
+            ACCEPT_EULA: "Y"
+        command: '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P Elaine21'
 networks:
     sail:
         driver: bridge
