--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=ControlCalidad
 APP_ENV=local
-APP_KEY=base64:yH+14dkSOCxkIfS5dO8eh1ZYmLGpaftLOfUiEaqjw1I=
+APP_KEY=base64:WEsSa55RA3EDC7B+vZ2ZQM5KLL5cLvY9QV68gf8JgwI=
 APP_DEBUG=true
 APP_URL=http://controlCalidadV3.test
 
@@ -9,15 +9,15 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.100.215
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=controlCalidadV3
-DB_USERNAME=desarrollo
-DB_PASSWORD=elaine
+DB_DATABASE=fresh
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 DB_CONNECTION_2=sqlsrv
-DB_HOST_2=192.168.100.215
-DB_PORT_2=3306
+DB_HOST_2=sql-server-db
+DB_PORT_2=1433
 DB_DATABASE_2=acecad
 DB_USERNAME_2=sa
 DB_PASSWORD_2=Elaine21.
