--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,25 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://fresh.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=controlcalidadv3
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=fresh
+DB_USERNAME=sail
+DB_PASSWORD=password
+
+DB_CONNECTION_2=sqlsrv
+DB_HOST_2=sql-server-db
+DB_PORT_2=1433
+DB_DATABASE_2=acecad
+DB_USERNAME_2=sa
+DB_PASSWORD_2=Elaine21.
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,9 +29,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -50,3 +57,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
