--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,19 +83,12 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
-    sql-server-db:
-        container_name: 'sql-server-db'
-        image: 'mcr.microsoft.com/mssql/server:2019-latest'
+    mssql:
+        image: 'alexzaragoza/mssql'
         ports:
             - "1433:1433"
         networks:
             - sail
-        volumes:
-            - './storage/database/acecad_matutino.bak :/home/'
-        environment:
-            SA_PASSWORD: "Elaine21"
-            ACCEPT_EULA: "Y"
-        command: '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P Elaine21'
 networks:
     sail:
         driver: bridge
