--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=ControlCalidad
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:WEsSa55RA3EDC7B+vZ2ZQM5KLL5cLvY9QV68gf8JgwI=
 APP_DEBUG=true
-APP_URL=http://fresh.test
+APP_URL=http://controlCalidadV3.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
