--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,6 +7,6 @@
     "/css/login/login.css": "/css/login/login.css",
     "/css/assets/navbar.css": "/css/assets/navbar.css",
     "/css/admin/main.css": "/css/admin/main.css",
-    "/css/mdb.min.css": "/css/mdb.min.css",
+    "/css/mdb.dark.min.css": "/css/mdb.dark.min.css",
     "/css/app.css": "/css/app.css"
 }
