--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,34 @@
+# Modulos node y carpetas generadas automaticamente
+
 /node_modules
 /public/hot
 /public/storage
 /storage/*.key
+
+# dependencias
+
 /vendor
 .phpunit.result.cache
+
+# Docker files
+
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
+
+# Logging
+
 npm-debug.log
 yarn-error.log
+
+# IDE dependencies
+
 /.idea
 /.vscode
 .env
+
+# Mix generated assets
+
 /public/css/*
 /public/js/*
 !/public/css/mdb.*
